@@ -1,3 +1,8 @@
+2006-10-19  Arno Rehn  <arno@arnorehn.de>
+
+	* Added support for marshalling C++-QStringLists to C#-ArrayLists
+	  (not tested yet)
+
 2006-10-19  Richard Dale  <rdale@foton.es>
 
 	* Removed Qt3 Qyoto sources
